fix sac disabled text overflowing on certain browsers

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1178,7 +1178,7 @@ screen and (max-width: 480px) {
 }
 
 .o-primary-btn--sacrifice--large {
-  width: 37rem;
+  width: 38rem;
 }
 
 .o-primary-btn--buy-ad {
